--- a/index.html
+++ b/index.html
@@ -57,7 +57,6 @@
 <!-- navbar ends -->
 
 
-<!-- hero section starts -->
 <section class="home" id="home">
     <div id="particles-js"></div>
 
@@ -79,7 +78,7 @@
     <img draggable="false" class="tilt" src="./assets/images/N.jpg" alt="">
 </div>
 </section>
-<!-- hero section ends -->
+
 
 
 <!-- about section starts -->
@@ -98,7 +97,7 @@
           software development domain.
         </p>
         <div class="morebtn">
-            <a href="https://drive.google.com/file/d/1CrJh0pNMDqjivqv3DZ1aEgvc6kV0PXQP/view?usp=drivesdk " target="_blank" class="btn"><span>Resume</span>
+            <a href="https://drive.google.com/file/d/17PkafW0taNv5DDiKktAqFVSVwvV_yLbU/view?usp=drivesdk" target="_blank" class="btn"><span>Resume</span>
               <i class="fas fa-arrow-circle-down"></i>
             </a>
         </div>
@@ -121,6 +120,9 @@
         <div class="desc">
             <h3>Full Stack Developer | Internship</h3>
             <p>Jan 2024 - Feb 2024</p>
+            <p>  Developed and implemented a full-stack blogging website utilizing web development technologies, ensuring seamless user 
+              experience and efficient content management. Also, worked on a React portfolio website and rigorously tested using APIs with 
+              Postman for seamless functionality. </p>
         </div>
       </div>
     </div>
@@ -133,6 +135,7 @@
         <div class="desc">
             <h3>Web Developer | Internship</h3>
             <p>Nov 2023 - Dec 2023</p>
+            <p>Spearheading the development of digital summarizer project aimed at enhancing information accessibility for the organization, leaveraging advanced technologies to ensure optimal performance and user satisfaction.</p>
         </div>
       </div>
     </div>
@@ -248,8 +251,12 @@
 <!-- </div>
 
 </section> -->
-<!-- work project section ends -->
 
+
+
+
+
+<!-- skills  -->
 
 <section class="skills" id="skills">
 
@@ -349,6 +356,8 @@
 </div>
 </div>
 </section>
+<!-- skills section ends -->
+
 
 <section class="contact" id="contact">
   
