--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           software development domain.
         </p>
         <div class="morebtn">
-            <a href="https://drive.google.com/file/d/1vlEZ7z0xjB5qS5FN7alfNotepx19ZhDS/view?usp=drivesdk" target="_blank" class="btn"><span>Resume</span>
+            <a href="https://drive.google.com/file/d/1juBWg83aEdOxfl6L8IAqOBP0J0V0S9mg/view?usp=drivesdk" target="_blank" class="btn"><span>Resume</span>
               <i class="fas fa-arrow-circle-down"></i>
             </a>
         </div>
@@ -204,8 +204,9 @@
             
             <div class="icon-box">
               <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h4><a href="https://github.com/nisargaa20/voice-powered-budget-tracker" target="_blank">Voice Powered Budget Tracker <i class="fas fa-external-link-alt"></i></a></h4>
-              <p><span>React,  API, Speechly</span><br>Built a expense tracker app using react with context API for state management and local storage for data persistence. Integrated speechly for voice command functionality, allowing users to add their expenses using voice commands. 
+              <h4><a href="https://github.com/nisargaa20/MERN-EstateSquare" target="_blank">
+                Estate Square <i class="fas fa-external-link-alt"></i></a></h4>
+              <p><span>MERN</span><br>Implemented cutting-edge authentication methods like JWT, Firebase, and Google OAuth for secure acess. Skilled in MongoDB CRUD operations, enabling seamless creation, reading, updating, and deletion of property listings. Adept at enriching user experience with intuitive features like image uploads, search functionality and property listing management. 
                 </p>
             </div>
             
