project live website updated

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             
             <div class="icon-box">
               <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h4><a href="https://github.com/nisargaa20/MERN-EstateSquare" target="_blank">
+              <h4><a href="https://mern-estatesquare.onrender.com" target="_blank">
                 Estate Square <i class="fas fa-external-link-alt"></i></a></h4>
               <p><span>MERN</span><br>Implemented cutting-edge authentication methods like JWT, Firebase, and Google OAuth for secure acess. Skilled in MongoDB CRUD operations, enabling seamless creation, reading, updating, and deletion of property listings. Adept at enriching user experience with intuitive features like image uploads, search functionality and property listing management. 
                 </p>
