--- a/index.html
+++ b/index.html
@@ -118,6 +118,33 @@
           <h2>BitsGate</h2>
         </div>
         <div class="desc">
+            <h3>Software Development Engineer</h3>
+            <p>May 2024 - Present</p>
+            
+        </div>
+      </div>
+    </div>
+
+
+    <div class="ex-container left">
+      <div class="content">
+        <div class="tag">
+          <h2>GirlScript Code of Summer (GSSoC'24)</h2>
+        </div>
+        <div class="desc">
+            <h3>Open Source Contributor</h3>
+            <p>May 2024 - Present</p>
+          
+        </div>
+      </div>
+    </div>
+
+    <div class="ex-container right">
+      <div class="content">
+        <div class="tag">
+          <h2>BitsGate</h2>
+        </div>
+        <div class="desc">
             <h3>Full Stack Developer | Internship</h3>
             <p>Jan 2024 - Feb 2024</p>
             <p>  Developed and implemented a full-stack blogging website utilizing web development technologies, ensuring seamless user 
