--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       </div>
     </div>
 
-    <div class="ex-container left">
+    <div class="ex-container right">
       <div class="content">
         <div class="tag">
           <h2>Timechain Summer of Code (TSOC'24)</h2>
