--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta name="description" content="Welcome to Nisarga's Portfolio. Software Engineer" />
     <!-- Custom CSS -->
     <link rel="stylesheet" href="./assets/css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Favicon -->
@@ -78,7 +80,7 @@
       </div>
     </div>
 <div class="image">
-    <img draggable="false" class="tilt" src="./assets/images/N.jpg" alt="">
+    <img draggable="false" class="tilt" src="./assets/images/nisarga.jpg" alt="">
 </div>
 </section>
 
