--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="Nisarga G R, portfolio, Nisarga G R, full stack dev, personal portfolios, portfolio design, portfolio website, personal portfolio" />
+    <meta name="keywords" content="Nisarga G R, portfolio, Nisarga G R, portfolio website, personal portfolio" />
     <meta name="description" content="Welcome to Nisarga's Portfolio. Software Engineer" />
     <!-- Custom CSS -->
     <link rel="stylesheet" href="./assets/css/style.css">
@@ -102,7 +102,7 @@
           software development domain.
         </p>
         <div class="morebtn">
-            <a href="https://drive.google.com/file/d/1Jltqld0TiUea_S2xGaa93frVnkGJJfzb/view?usp=drivesdk" target="_blank" class="btn"><span>Resume</span>
+            <a href="https://drive.google.com/file/d/1DT58guVB8ZNhLOgKBCLdEtqQgbga-UxI/view?usp=drivesdk" target="_blank" class="btn"><span>Resume</span>
               <i class="fas fa-arrow-circle-down"></i>
             </a>
         </div>
